fix: more menu layout issue (#3397)
* fix: more menu layout issue

* handled extra large screen

--- a/src/ui/components/DropdownMenu/styles.scss
+++ b/src/ui/components/DropdownMenu/styles.scss
@@ -81,6 +81,7 @@
   display: none;
   list-style-type: none;
   margin: 0;
+  max-width: 245px;
   padding: 4px 24px 20px;
   position: absolute;
   top: 30px;
@@ -103,5 +104,9 @@
 
   .DropdownMenu--active & {
     display: block;
+  }
+
+  @include respond-to(extraLarge) {
+    max-width: 300px;
   }
 }
