--- a/src/ui/components/DropdownMenuItem/styles.scss
+++ b/src/ui/components/DropdownMenuItem/styles.scss
@@ -34,3 +34,8 @@
 .DropdownMenuItem--detached {
   margin-top: 8px;
 }
+
+.DropdownMenuItem {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
